# llm-api

./: README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: dependencies.py  router.py
src/application/services/: chat_service.py
src/domain/clients/: llm_client.py
src/domain/entities/: chat_interaction.py
src/domain/repositories/: chat_repository.py
src/infrastructure/clients/: gemini_client.py
src/infrastructure/persistence/: database.py  db_chat_repository.py
src/shared/: settings.py
tests/api/: test_router.py
tests/application/: test_chat_service.py
tests/infrastructure/clients/: test_gemini_client.py
tests/infrastructure/persistence/: test_db_chat_repository.py
