[project]
name = "llm-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Ana"}
]
readme = "README.md"
requires-python = ">=3.13"
package-mode = false

[tool.poetry.dependencies]
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
google-genai = "^1.26.0"
pymongo = "^4.13.2"
pydantic-settings = "^2.10.1"
pytest-cov = "^6.2.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
pytest-asyncio = "^1.1.0"

[tool.pytest.ini_options]
pythonpath = [".", "src", "tests"]